apps/pocket-id/the-intersect/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  labels:
    app: pocket-id
    service: pocket-id
spec:
  type: ClusterIP
  selector:
    app: pocket-id
  ports:
    - name: http
      port: 80
      targetPort: http
